[tool.poetry]
name = "unlisted"
version = "0.1.3"
description = "Find a YouTube channel's unlisted videos"
authors = ["ramsy0dev"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.15.3"
requests = "^2.32.3"
rich = "^14.0.0"
user-agent = "^0.1.10"
py-proxy = "^0.2.6"
pytube = {git = "https://github.com/ramsy0dev/pytube"}


[tool.poetry.plugins."console_scripts"]
unlisted = "unlisted:cli.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
